[package]
name = "volatility-harvesting"
version = "1.1.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.19"
config = "0.11.0"
dotenv = "0.15"
env_logger = "0.7.1"
futures = "0.3.0"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.2.2" } 
lazy_static = "1.4.0"
log = "0.4.8"
polygon = {git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.6.0", default-features = false, features = ["ws"]}
rand = "0.7.3"
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
rust_decimal = "1.11.1"
serde = "1.0"
serde_json = "1.0.55"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
tokio-stream = "0.1.4"
